--- a/views/home.html
+++ b/views/home.html
@@ -1,142 +1,65 @@
-        {% extends "main.html" %}
+{% extends "main.html" %}
 
-        {% block content %}
-        <div class="govuk-width-container">
-        <div class="govuk-grid-row">
+{% block content %}
+<div class="govuk-width-container">
+  <div class="govuk-grid-row">
 
-            <div class="govuk-grid-column-two-thirds">
+    <div class="govuk-grid-column-two-thirds">
 
-        <div class="govuk-accordion" data-module="govuk-accordion" id="accordion-with-summary-sections">
-            <div class="govuk-accordion__section">
-              <div class="govuk-accordion__section-header">
-                <h2 class="govuk-accordion__section-heading">
-                  <span class="testClass govuk-accordion__section-button" id="accordion-with-summary-sections-heading-1">
-                    Understanding agile project management
-                  </span>
-                </h2>
-                <div class="govuk-accordion__section-summary govuk-body" id="accordion-with-summary-sections-summary-1">
-                  Introductions, methods, core features.
-                </div>
-              </div>
-              <div id="accordion-with-summary-sections-content-1" class="govuk-accordion__section-content">
-                <ul class="govuk-list">
-                  <li>
-                    <a class="govuk-link" href="#">Agile and government services: an introduction</a>
-                  </li>
-                  <li>
-                    <a class="govuk-link" href="#">Agile methods: an introduction</a>
-                  </li>
-                  <li>
-                    <a class="govuk-link" href="#">Core principles of agile</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-            <div class="govuk-accordion__section">
-              <div class="govuk-accordion__section-header">
-                <h2 class="govuk-accordion__section-heading">
-                  <span class="govuk-accordion__section-button" id="accordion-with-summary-sections-heading-2">
-                    Working with agile methods
-                  </span>
-                </h2>
-                <div class="govuk-accordion__section-summary govuk-body" id="accordion-with-summary-sections-summary-2">
-                  Workspaces, tools and techniques, user stories, planning.
-                </div>
-              </div>
-              <div id="accordion-with-summary-sections-content-2" class="govuk-accordion__section-content">
-                <ul class="govuk-list">
-                  <li>
-                    <a class="govuk-link" href="#">Creating an agile working environment</a>
-                  </li>
-                  <li>
-                    <a class="govuk-link" href="#">Agile tools and techniques</a>
-                  </li>
-                  <li>
-                    <a class="govuk-link" href="#">Set up a team wall</a>
-                  </li>
-                  <li>
-                    <a class="govuk-link" href="#">Writing user stories</a>
-                  </li>
-                  <li>
-                    <a class="govuk-link" href="#">Planning in agile</a>
-                  </li>
-                  <li>
-                    <a class="govuk-link" href="#">Deciding on priorities</a>
-                  </li>
-                  <li>
-                    <a class="govuk-link" href="#">Developing a roadmap</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-            <div class="govuk-accordion__section">
-              <div class="govuk-accordion__section-header">
-                <h2 class="govuk-accordion__section-heading">
-                  <span class="govuk-accordion__section-button" id="accordion-with-summary-sections-heading-3">
-                    Governing agile services
-                  </span>
-                </h2>
-                <div class="govuk-accordion__section-summary govuk-body" id="accordion-with-summary-sections-summary-3">
-                  Principles, measuring progress, spending money.
-                </div>
-              </div>
-              <div id="accordion-with-summary-sections-content-3" class="govuk-accordion__section-content">
-                <ul class="govuk-list">
-                  <li>
-                    <a class="govuk-link" href="#">Governance principles for agile service delivery</a>
-                  </li>
-                  <li>
-                    <a class="govuk-link" href="#">Measuring and reporting progress</a>
-                  </li>
-                  <li>
-                    <a class="govuk-link" href="#">Spend controls: check if you need approval to spend money on a service</a>
-                  </li>
-                  <li>
-                    <a class="govuk-link" href="#">Spend controls: apply for approval to spend money on a service</a>
-                  </li>
-                  <li>
-                    <a class="govuk-link" href="#">Spend controls: the new pipeline process</a>
-                  </li>
-                  <li>
-                    <a class="govuk-link" href="#">Working across organisational boundaries</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-            <div class="govuk-accordion__section">
-              <div class="govuk-accordion__section-header">
-                <h2 class="govuk-accordion__section-heading">
-                  <span class="govuk-accordion__section-button" id="accordion-with-summary-sections-heading-4">
-                    Phases of an agile project
-                  </span>
-                </h2>
-                <div class="govuk-accordion__section-summary govuk-body" id="accordion-with-summary-sections-summary-4">
-                  Discovery, alpha, beta, live and retirement.
-                </div>
-              </div>
-              <div id="accordion-with-summary-sections-content-4" class="govuk-accordion__section-content">
-                <ul class="govuk-list">
-                  <li>
-                    <a class="govuk-link" href="#">How the discovery phase works</a>
-                  </li>
-                  <li>
-                    <a class="govuk-link" href="#">How the alpha phase works</a>
-                  </li>
-                  <li>
-                    <a class="govuk-link" href="#">How the beta phase works</a>
-                  </li>
-                  <li>
-                    <a class="govuk-link" href="#">How the live phase works</a>
-                  </li>
-                  <li>
-                    <a class="govuk-link" href="#">Retiring your service</a>
-                  </li>
-                </ul>
-              </div>
+      <div class="govuk-accordion" data-module="govuk-accordion" id="accordion-with-summary-sections">
+        <div class="govuk-accordion__section">
+          <div class="govuk-accordion__section-header">
+            <h2 class="govuk-accordion__section-heading">
+              <span class="testClass govuk-accordion__section-button" id="accordion-with-summary-sections-heading-1">
+                Understanding our digusting nation
+              </span>
+            </h2>
+            <div class="govuk-accordion__section-summary govuk-body" id="accordion-with-summary-sections-summary-1">
+              Statistics, chaoticness and grossness
             </div>
           </div>
-                          
+          <div id="accordion-with-summary-sections-content-1" class="govuk-accordion__section-content">
+            <ul class="govuk-list">
+              <li>
+                <a class="govuk-link" href="/search-location">Information about each UK region</a>
+              </li>
+              <li>
+                <a class="govuk-link" href="/top-ten">Which area is in the top 10?</a>
+              </li>
+              <li>
+                <a class="govuk-link" href="#">Random</a>
+              </li>
+            </ul>
+          </div>
         </div>
-        </div>
-        </div>
-        {% endblock %}
+      </div>
+    </div>
+  </div>
+</div>
+<footer class="govuk-footer">
+  <div class="govuk-width-container">
+    <div class="govuk-footer__meta">
+      <div class="govuk-footer__meta-item govuk-footer__meta-item--grow">
+        <svg aria-hidden="true" focusable="false" class="govuk-footer__licence-logo" xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 483.2 195.7" height="17" width="41">
+          <path fill="currentColor"
+            d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145" />
+        </svg>
+        <span class="govuk-footer__licence-description">
+          All content is available under the
+          <a class="govuk-footer__link"
+            href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/" rel="license">Open Dog
+            Dirt Licence v3.0</a>, except where otherwise stated
+        </span>
+      </div>
+      <div class="govuk-footer__meta-item">
+        <a class="govuk-footer__link govuk-footer__copyright-logo"
+          href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/">
+          © Doggy copyright
+        </a>
+      </div>
+    </div>
+  </div>
+</footer>
+
+{% endblock %}
