--- a/views/main.html
+++ b/views/main.html
@@ -14,17 +14,7 @@
   {{ govukHeader({
     homepageUrl: "#",
     serviceName: "Dog Dirt Division",
-    serviceUrl: "#",
-    navigation: [
-      {
-        href: "#",
-        text: "Search by Location"
-      },
-      {
-        href: "#",
-        text: "Top 10 Locations"
-      }
-    ]
+    serviceUrl: "#"
   }) }}
 {% endblock %}
 
